# PhysariumArt

./: .gitignore  Cargo.toml  build.rs
Shader/: Physarum.comp  Physarum.wgsl  Slime.wgsl  SlimeDe.wgsl  SlimeDi.wgsl  frag.spv  passThrough.vert  passThrough.wgsl  render.frag  render.wgsl  shader.frag  shader.vert  vert.spv
src/: gpu_create.rs  main.rs  old.rs
