[package]
name = "physarium_art"
version = "0.1.0"
authors = ["SKittan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17.1"

[build-dependencies]
anyhow = ">=1.0"
fs_extra = ">=1.1"
glob = ">=0.3"
shaderc = ">=0.7"
